[tool.poetry]
name = "primal-page"
version = "1.0.0"
description = ""
authors = ["ChrisKent <chrisgkent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^2.1.1"
pydantic = "^2.4.2"
click = "^8.1.7"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
primal-page = "primal_page.main:app"
