[tool.poetry]
name = "primal-page"
version = "1.3.0"
description = ""
authors = ["ChrisKent <chrisgkent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^2.1.1"
pydantic = "^2.4.2"
click = "^8.1.7"
typer = {extras = ["all"], version = "^0.9.0"}
primalhelper = "^1.0.0"
linkml = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
typer-cli = {path = "../typer-cli"} # https://github.com/Patarimi/typer-cli/commit/f44b547a0b9ea71e5c7b2dc7d4c1ab1212394e5e

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
primal-page = "primal_page.main:app"
